Vault service controllers
