# vault-service/src/main/kotlin/exp/yaremchuken/vault_service/repository/entity/Secret.kt
@@ -1,0 +1,24 @@
+package exp.yaremchuken.vault_service.repository.entity
+
+import jakarta.persistence.Column
+import jakarta.persistence.Entity
+import jakarta.persistence.GeneratedValue
+import jakarta.persistence.GenerationType
+import jakarta.persistence.Id
+import org.hibernate.annotations.CreationTimestamp
+import java.time.Instant
+import java.time.OffsetDateTime
+
+@Entity
+data class Secret(
+    @Id
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    val id: Long = 0,
+
+    @Column(name = "group_id", nullable = false)
+    val groupId: Long,
+
+    @field:CreationTimestamp
+    @Column(name = "created_at", nullable = false, updatable = false)
+    val createdAt: OffsetDateTime = OffsetDateTime.now(),
+)
