# vault-service/src/main/kotlin/exp/yaremchuken/vault_service/repository/entity/SecretGroup.kt
@@ -1,0 +1,31 @@
+package exp.yaremchuken.vault_service.repository.entity
+
+import jakarta.persistence.Column
+import jakarta.persistence.Entity
+import jakarta.persistence.GeneratedValue
+import jakarta.persistence.GenerationType
+import jakarta.persistence.Id
+import org.hibernate.annotations.CreationTimestamp
+import org.hibernate.annotations.UpdateTimestamp
+import java.time.OffsetDateTime
+
+@Entity
+data class SecretGroup(
+    @Id
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    val id: Long = 0,
+
+    @Column(name = "account_id", nullable = false)
+    val accountId: Long,
+
+    @Column(name = "title", nullable = false)
+    val title: String,
+
+    @field:CreationTimestamp
+    @Column(name = "created_at", nullable = false, updatable = false)
+    val createdAt: OffsetDateTime = OffsetDateTime.now(),
+
+    @field:UpdateTimestamp
+    @Column(name = "updated_at", nullable = false)
+    val updatedAt: OffsetDateTime = OffsetDateTime.now(),
+)
