# vault-service/src/main/resources/openapi/api/services/model/secret.yaml
@@ -12,13 +12,13 @@ CreateSecretRequest:
       example: 'Home wi-fi password'
       type: string
       x-field-extra-annotation: "@jakarta.validation.constraints.NotEmpty(message = \"{secret.create.restriction.title_is_empty}\")
-                                 @jakarta.validation.constraints.Size(message = \"{secret.create.restriction.title_size}\", min = 3, max = 16)"
+                                 @jakarta.validation.constraints.Size(message = \"{secret.create.restriction.title_size}\", min = 1, max = 256)"
     value:
       description: 'Value for this secret'
       example: 'ADHF-ALFKDNVUE_TIGJDJVH36U'
       type: string
       x-field-extra-annotation: "@jakarta.validation.constraints.NotEmpty(message = \"{secret.create.restriction.value_is_empty}\")
-                                 @jakarta.validation.constraints.Size(message = \"{secret.create.restriction.value_size}\", min = 3, max = 16)"
+                                 @jakarta.validation.constraints.Size(message = \"{secret.create.restriction.value_size}\", min = 1, max = 256)"
   required:
     - groupId
     - title
@@ -28,7 +28,7 @@ RenewSecretRequest:
   type: object
   description: 'Create new version of existing secret'
   properties:
-    id:
+    secretId:
       description: 'Secret identifier'
       example: 123
       type: integer
@@ -38,15 +38,19 @@ RenewSecretRequest:
       example: 'Home wi-fi password'
       type: string
       x-field-extra-annotation: "@jakarta.validation.constraints.NotEmpty(message = \"{secret.create.restriction.title_is_empty}\")
-                                 @jakarta.validation.constraints.Size(message = \"{secret.create.restriction.title_size}\", min = 3, max = 16)"
+                                 @jakarta.validation.constraints.Size(message = \"{secret.create.restriction.title_size}\", min = 1, max = 256)"
     value:
       description: 'Value for this secret'
       example: 'ADHF-ALFKDNVUE_TIGJDJVH36U'
       type: string
       x-field-extra-annotation: "@jakarta.validation.constraints.NotEmpty(message = \"{secret.create.restriction.value_is_empty}\")
-                                 @jakarta.validation.constraints.Size(message = \"{secret.create.restriction.value_size}\", min = 3, max = 16)"
+                                 @jakarta.validation.constraints.Size(message = \"{secret.create.restriction.value_size}\", min = 1, max = 256)"
+  required:
+    - secretId
+    - title
+    - value
 
-GetSecretsResponse:
+ListSecretsResponse:
   type: object
   description: 'List of secrets without secured data'
   properties:
@@ -62,7 +66,7 @@ SecretData:
   type: object
   description: 'Secret info without secured data'
   properties:
-    id:
+    secretId:
       description: 'Identifier of the secret'
       example: 123
       type: integer
@@ -71,15 +75,15 @@ SecretData:
       description: 'Title of the secret, unique for a group'
       example: 'Home wi-fi password'
       type: string
-    version:
-      description: 'Version of this secret'
-      example: 123
-      type: integer
-      format: int64
+    createdAt:
+      description: 'The timestamp when this version of the secret was created, UTC'
+      example: 2025-01-01 06:00:00
+      type: string
+      format: date-time
   required:
-    - id
+    - secretId
     - title
-    - version
+    - createdAt
 
 SecretSecuredData:
   type: object
